Kbw-3 customtable中读取一liststring传给微信端显示

--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "pages":[
     "pages/index/index",
     "pages/logs/logs",
-    "pages/getone/getone"
+    "pages/getone/getone",
+    "pages/getList/getList"
   ],
   "window":{
     "backgroundTextStyle":"light",
