Kbw-4 前台post 数据到后台的custom table中

--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/logs/logs",
     "pages/getone/getone",
-    "pages/getList/getList"
+    "pages/getList/getList",
+    "pages/postString/postString"
   ],
   "window":{
     "backgroundTextStyle":"light",
