Kbw-8传递一组对象给前台

--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/logs/logs",
     "pages/getone/getone",
     "pages/getList/getList",
-    "pages/postString/postString"
+    "pages/postString/postString",
+    "pages/deleteFromList/deleteFromList"
   ],
   "window":{
     "backgroundTextStyle":"light",
