Kbw-15 类电商的效果实现-菜品详情

--- a/app.json
+++ b/app.json
@@ -1,17 +1,18 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
     "pages/logs/logs",
     "pages/getone/getone",
     "pages/getList/getList",
     "pages/postString/postString",
     "pages/picture/picture",
+    "pages/productContent/productContent",
     "pages/deleteFromList/deleteFromList"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   }
 }
