--- a/app.json
+++ b/app.json
@@ -7,6 +7,8 @@
     "pages/postString/postString",
     "pages/picture/picture",
     "pages/productContent/productContent",
+    "pages/searchBusiness/searchBusiness",
+    "pages/productList/productList",
     "pages/deleteFromList/deleteFromList"
   ],
   "window": {
